--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
-primaryColor="#ec2711"
-backgroundColor="#000000"
-secondaryBackgroundColor="#19c18f"
-textColor="#ffffff"
+primaryColor="#581b2d"
+backgroundColor="#0c0c0c"
+secondaryBackgroundColor="#691c30"
+textColor="#e2c0ca"
 font="sans serif"
